src_old/objects/AIModel__c.object
<CustomObject>
    <description>Einstein AI Model Definition</description>
    <fields>
        <fullName>DataSetId__c</fullName>
        <description>Enstein Data Set Identifier generated by the salesforce AI platform</description>
        <label>Data Set ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelId__c</fullName>
        <description>Model Identifier generated by Salesforce Einstein Platform</description>
        <label>Model Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initialized</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Retraining</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>AI Model Type that indicate what purpose this model is trained for</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image Classification</fullName>
                </value>
                <value>
                    <fullName>Object Detection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AI Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AI Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>